bin/tests/snapshots/empty_pattern__d126fd36c3561a6c02bd6635634d0261_lint.snap
---
source: bin/tests/empty_pattern.rs
---
({ ... }: 42)
---
[empty_pattern] Warning: Found empty pattern in function argument
   ╭─[ <temp_file_path>:1:2 ]
   │
 1 │ ({ ... }: 42)
   │  ───┬───  
   │     ╰───── This pattern is empty, use _ instead
───╯
