bin/tests/snapshots/empty_pattern__d126fd36c3561a6c02bd6635634d0261_lint_errfmt.snap
---
source: bin/tests/empty_pattern.rs
---
({ ... }: 42)
---
<temp_file_path>>1:2:W:10:This pattern is empty, use `_` instead
