bin/tests/snapshots/empty_pattern__d126fd36c3561a6c02bd6635634d0261_lint_json.snap
---
source: bin/tests/empty_pattern.rs
---
({ ... }: 42)
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "empty_pattern",
      "note": "Found empty pattern in function argument",
      "code": 10,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 2
            },
            "to": {
              "line": 1,
              "column": 9
            }
          },
          "message": "This pattern is empty, use `_` instead",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 2
              },
              "to": {
                "line": 1,
                "column": 9
              }
            },
            "fix": "_"
          },
          "fixable": true
        }
      ]
    }
  ]
}
