bin/tests/snapshots/empty_pattern__d258b2d28244a887c36cde36b8b3c301_fix.snap
---
source: bin/tests/empty_pattern.rs
---
({ ... } @ inputs: inputs)
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-({ ... } @ inputs: inputs)
+(inputs: inputs)
