bin/tests/snapshots/empty_pattern__d258b2d28244a887c36cde36b8b3c301_lint.snap
---
source: bin/tests/empty_pattern.rs
---
({ ... } @ inputs: inputs)
---
[redundant_pattern_bind] Warning: Found redundant pattern bind in function argument
   ╭─[ <temp_file_path>:1:2 ]
   │
 1 │ ({ ... } @ inputs: inputs)
   │  ────────┬───────  
   │          ╰───────── This pattern bind is redundant, use inputs instead
───╯
