bin/tests/snapshots/empty_pattern__d258b2d28244a887c36cde36b8b3c301_lint_errfmt.snap
---
source: bin/tests/empty_pattern.rs
---
({ ... } @ inputs: inputs)
---
<temp_file_path>>1:2:W:11:This pattern bind is redundant, use `inputs` instead
