bin/tests/snapshots/empty_pattern__fix_22c961ee54a9c23b418b940d007946468ffce1d27d6fcb5460b3930ee3aa3188.snap
---
source: bin/tests/empty_pattern.rs
---
({ ... }: 42)

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-({ ... }: 42)
+(_: 42)
