bin/tests/snapshots/empty_pattern__fix_b208a77aedcbe49076a77bb680515b44d4d67ffe6f897964572f3238898e91fa.snap
---
source: bin/tests/empty_pattern.rs
---
({ ... } @ inputs: inputs)

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-({ ... } @ inputs: inputs)
+(inputs: inputs)
